fix: preserve design coloring through light and dark modes

--- a/framework/core/less/common/root.less
+++ b/framework/core/less/common/root.less
@@ -36,6 +36,13 @@
   --text-on-dark:                  @text-on-dark;
   --text-on-light:                 @text-on-light;
 
+  & when (@config-dark-mode = true) {
+    --yiq-threshold: 108;
+  }
+  & when (@config-dark-mode = false) {
+    --yiq-threshold: 138;
+  }
+
   // ---------------------------------
   // COMPONENTS
 
